xmldiff (0.5.19) distribution(s); urgency=low

	* Change source repository

-- Jim Schaad <ietf@augustcellars.com>  Sun 24 Aug 2019 12:00:00 -0700

xmldiff (0.5.18) distribution(s); urgency=low

	* Fix error building paragraphs with 'li'
	* Fix error in JavaScript

-- Jim Schaad <ietf@augustcellars.com>  Sat 17 Aug 2019 12:00:00 -0700

	* Remove Python 3.4 from the supported list
	* Correct problem with writing unicode on Python 2.7

-- Jim Schaad <ietf@augustcellars.com>  Fri 16 Aug 2019 12:00:00 -0700

xmldiff (0.5.15) distribution(s); urgency=low

	* Change the parameterization on the text difference code to use shorter unmatched strings.
	* Alter how namespaces are displayed so they are not everywhere.

-- Jim Schaad <ietf@augustcellars.com>  Fri 31 May 2019 12:00:00 -0800

xmldiff (0.5.14) distribution(s); urgency=low

	* Change the text matching code to use longer sequences when possible
	* Add 2.7 dependency for enumerations

-- Jim Schaad <ietf@augustcellars.com>  Sun 21 Apr 2019 12:00:00 -0800

xmldiff (0.5.13) distribution(s); urgency=low

	* Clean up so that pyflakes is happy

-- Jim Schaad <ietf@augustcellars.com>  Sat 06 Apr 2019 12:00:00 -0700

xmldiff (0.5.12) distribution(s); urgency=low

	* Add a class to deal with entities when they are not expanded.
	* Remove --template-url option as the templates are now self-contained
	* Load files from the cache if possible

-- Jim Schaad <ietf@augustcellars.com>  Fri 22 Feb 2019 12:00:00 -0800

xmldiff (0.5.11) distribution(s); urgency=low

	* Add code to deal with trees which are going to merge but they	subtrees are going to overlap
	* Add -D option to surpress filling in default attributes from DTD
	* Name spaces are now using a nsX namespace rather than using the {ns}field format.
	* Change the html template to make sure that it is all within the screen.

-- Jim Schaad <ietf@augustcellars.com>  Tue 1 Janc 2019 12:00:00 -0800

xmldiff (0.5.10) distribution(s); urgency=low
