@@ -1,0 +1,8 @@
+<section>
+  <t>
+    As this header element does not provide any trust, the header attribute can be in either a protected or unprotected header attribute.
+  </t>
+  <t>
+    As this header element does not provide any trust, the header attribute can be in either a protected or unprotected header attribute.
+  </t>
+</section>
