@@ -1,3 +1,9 @@
+xmldiff (0.5.20) distribution(s); urgency=low
+
+	* Fix two text differance bugs
+
+-- Jim Schaad <ietf@augustcellars.com>  Thur 5 Dec 2019 12:00:00 -0700
+
 xmldiff (0.5.19) distribution(s); urgency=low
 
 	* Change source repository
